--- a/package.json
+++ b/package.json
@@ -12,6 +12,8 @@
     "@fortawesome/free-brands-svg-icons": "^6.4.0",
     "@fortawesome/free-solid-svg-icons": "^6.4.0",
     "@fortawesome/vue-fontawesome": "^3.0.3",
+    "@vueuse/core": "^10.3.0",
+    "markdown-it": "^13.0.1",
     "vue": "^3.3.4",
     "vue-router": "^4.2.2"
   },
