--- a/package.json
+++ b/package.json
@@ -12,6 +12,7 @@
     "@fortawesome/free-brands-svg-icons": "^6.4.2",
     "@fortawesome/free-solid-svg-icons": "^6.4.2",
     "@fortawesome/vue-fontawesome": "^3.0.3",
+    "highlight.js": "^11.9.0",
     "nprogress": "^0.2.0",
     "vue": "^3.3.4",
     "vue-router": "^4.2.4"
