--- a/package.json
+++ b/package.json
@@ -18,10 +18,10 @@
     "vue-router": "^4.5.0"
   },
   "devDependencies": {
+    "@tailwindcss/postcss": "^4.0.1",
     "@vitejs/plugin-vue": "^4.3.4",
-    "autoprefixer": "^10.4.16",
     "postcss": "^8.4.31",
-    "tailwindcss": "^3.3.3",
+    "tailwindcss": "^4.0.1",
     "vite": "^4.5.9"
   }
 }
